# Tossit-Coding_Challenge

./: Cargo.toml  README.md  products.db
product-frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
product-frontend/src/: index.html  main.ts  styles.css
product-frontend/src/app/: app.config.ts  app.css  app.html  app.ts  product.service.ts
product_api/: Cargo.toml
product_api/src/: main.rs
src/: main.rs
