[package]
name = "product_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
actix-cors = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
